# mcp-ntc-road-map-codex-agent

./: .gitignore  .ntc-code-map.toml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/: codex.md
scripts/: install.sh
src/ntc_code_map/: __main__.py  agents.py  cli.py  codex_config.py  config.py  indexer.py  query.py  server.py  storage.py  symbols.py
tests/: test_agents.py  test_codex_config.py  test_config.py  test_index_query.py
